--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="content">
             <h2>PORTFOLIO</h2>
             <ul>
-              <li><a href="">about_owner</a></li>
+              <li><a href="https://www.instagram.com/shubhash_shivade/">about_owner</a></li>
               <li><a href="">home</a></li>
               <li><a href="https://dpboss.net/">live-reslute</a></li>
 
