--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="https://dpboss.net/supreme-night-chart.php#bottom">supreme-night</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="https://dpboss.net/time-bazar-Chart.php#bottom">time-bazar</a>
+                  </li>
 
       
     </ol></h4>
