--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         </div>
         <div class="main">
-            <h1>SATTA KING</h1>
+            <h1>4-trader</h1>
             <h4>HELLO<ol class="navbar-nav mr-auto">
                   <li class="nav-item">
                     <a class="nav-link" href="https://dpboss.net/milan-morning-jodi.php#bottom">milan-mornigs</a>
