--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
                   <li class="nav-item">
                     <a class="nav-link" href="https://dpboss.net/time-bazar-Chart.php#bottom">time-bazar</a>
                   </li>
+                  <li class="nav-item">
+
+                    <a class="nav-link" href="https://dpboss.net/madhur-day-satta-matka-jodi-chart.php#bottom">madur-day</a>
+
+                  </li>
 
       
     </ol></h4>
